--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -11,7 +11,7 @@ body, html {
 }
 
 h4 {
-  font-size:20px;
+  font-size:17px;
   font-weight:700;
   padding: 6px;
   margin: auto;
@@ -135,7 +135,7 @@ button:hover {
 #sidebar-menu {
   position: fixed;
   z-index: 1;
-  width: 300px;
+  width: 250px;
   height: 100%;
   display: none;
   margin-top: 85px;
@@ -150,7 +150,7 @@ button:hover {
   text-align: left;
   color: white;
   text-decoration: none;
-  font-size:20px;
+  font-size:17px;
   font-weight:700;
   text-transform: uppercase;
 }
@@ -166,16 +166,17 @@ button:hover {
 
 .close-div {
   width: 100%;
-  height: 70px;
+  height: 40px;
 }
 
 .close-div a {
-  width:30px;
-  height:30px;
-  padding:10px;
+  width:20px;
+  height:20px;
+  padding: 5px;
   margin:auto;
   font-family: Arial, sans-serif;
   text-align:center;
+  vertical-align: middle;
   float:right;
   text-decoration:none;
   font-size:30px;
@@ -190,7 +191,6 @@ button:hover {
 
 .close-div a:hover {
   font-weight: 900;
-  background-color: white;
   color: black;
   -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
   -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
@@ -215,8 +215,6 @@ button:hover {
 
 .init-menu:hover {
   color: black;
-  -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-  -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
   transition: all 0.3s ease 0s;
 }
 
@@ -510,7 +508,7 @@ button:hover {
 
 .distance-display, .suggested-display, .room-display, .rever-display {
   height: 50%;
-  width: 90%;
+  width: 80%;
 }
 
 .reverberation-title {
