--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -229,16 +229,33 @@ button:hover {
   background: DodgerBlue;
 }
 
-.calculate-button a {
+.calculate-button a, .obatain-button a {
   position: relative;
   text-decoration: none;
   outline: 0;
   color: inherit;
 }
 
-.download-button {
-  background: DodgerBlue;
-  margin-bottom: 25px;
+.obatain-button {
+  width:150px;
+  height:50px;
+  padding: 0;
+  margin-top:20px;
+  margin-bottom:0px;
+  position:relative;
+  color:white;
+  background:DodgerBlue;
+}
+
+.obatain-button:hover{
+  width: 200px;
+  color: #404040;
+  font-weight: 700;
+  letter-spacing: 3px;
+  background: white;
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  transition: all 0.3s ease 0s;
 }
 
 .bg-image {
@@ -511,6 +528,10 @@ button:hover {
 .distance-display, .suggested-display, .room-display, .rever-display {
   height: 50%;
   width: 90%;
+}
+
+.suggested-display {
+  border-top: 1px solid #ccc;
 }
 
 .reverberation-title {
