--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -238,13 +238,13 @@ button:hover {
 
 .obatain-button {
   width:150px;
-  height:50px;
+  height:30px;
   padding: 0;
   margin-top:20px;
   margin-bottom:0px;
   position:relative;
   color:white;
-  background:DodgerBlue;
+  background:SteelBlue;
 }
 
 .obatain-button:hover{
@@ -531,7 +531,8 @@ button:hover {
 }
 
 .suggested-display {
-  border-top: 1px solid #ccc;
+  border-radius: 0;
+  border-top: 3px solid #404040;
 }
 
 .reverberation-title {
