--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -46,7 +46,7 @@ p {
   margin-top: 7px;
 }
 
-details {
+/* details {
   position: absolute;
   float: right;
   width: 50px;
@@ -75,7 +75,7 @@ summary {
 
 summary::-webkit-details-marker {
   display: none;
-}
+} */
 
 button {
   border: none;
@@ -210,7 +210,7 @@ button:hover {
 .init-menu {
   width: auto;
   height: auto;
-  z-index: 1;
+  z-index: 3;
   margin:auto;
   padding: 0;
   margin-left:15px;
@@ -390,7 +390,7 @@ button:hover {
 /* Style the tab */
 .tab {
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   width: 100%;
   height: 85px;
   background-color: #404040;
@@ -398,7 +398,7 @@ button:hover {
 }
 
 .init-logo {
-  z-index: 1;
+  z-index: 3;
   width:800px;
   height: 70px;
   margin: auto;
@@ -433,6 +433,7 @@ button:hover {
   box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
+/*
 .info-area div {
   background-color: white;
   width: 300px;
@@ -443,6 +444,37 @@ button:hover {
 
 .info-material div {
   width: 230px;
+}
+
+details {
+  position: absolute;
+  float: right;
+  width: 50px;
+  z-index: 2;
+  height: auto;
+  margin-top: 25px;
+  margin-left:70%;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+summary {
+  z-index: 2;
+  height: 20px;
+  width: 20px;text-decoration: none;
+  background-color: inherit;
+  color: #404040;
+  border-radius: 50%;
+  border: 3px solid #404040;
+  font-size: 17px;
+  font-weight: 700;
+  font-style: italic;
+  text-align: center;
+  box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+summary::-webkit-details-marker {
+  display: none;
 }
 
 .info-area h2 {
@@ -469,6 +501,70 @@ button:hover {
 #reverTime details {
     margin-top: 0;
     margin-left: 80%;
+} */
+
+details {
+  position: absolute;
+  z-index: 1;
+}
+
+#roomDimensions-container details, #minDistance-container details {
+  margin-top:25px;
+  margin-left:80%;
+}
+
+#reverTime-normal details {
+  margin-top: 0;
+  margin-left: 80%;
+}
+
+#reverTime-octaves details {
+  margin-top: 0;
+  margin-left: 80%;
+}
+
+#materials details {
+  margin-top: 15px;
+  margin-left: 100%;
+}
+
+.info-area summary {
+  height: 20px;
+  width: 20px;
+  text-decoration: none;
+  background-color: inherit;
+  color: #404040;
+  border-radius: 50%;
+  border: 3px solid #404040;
+  font-size: 17px;
+  font-weight: 700;
+  font-style: italic;
+  text-align: center;
+  box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+.info-area summary::-webkit-details-marker {
+  display: none;
+}
+
+.info-area div {
+  background-color: white;
+  width: 300px;
+  font-family: "Cambay";
+  border-radius:5px;
+  border: 2px solid #404040;
+}
+
+.info-area h2 {
+  color: white;
+  background-color:#404040;
+}
+
+.info-area p {
+  text-align: left;
+  font-size: 15px;
+  padding: 20px;
+  padding-top: 10px;
 }
 
 .distance-image {
